--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ APP_SECRET=67558e764c2be25e92dddfc3f7f7fddc
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/invoice
+DATABASE_URL=mysql://root:@127.0.0.1:3306/symfony_invoice
 ###< doctrine/doctrine-bundle ###
