registration email,invoice pdf

--- a/.env
+++ b/.env
@@ -26,3 +26,12 @@ APP_SECRET=67558e764c2be25e92dddfc3f7f7fddc
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@127.0.0.1:3306/symfony_invoice
 ###< doctrine/doctrine-bundle ###
+MAILER_URL=smtp://smtp.mailtrap.io:2525?encryption=tls&auth_mode=login&username=b4861f273cd25e&password=76304156982fbd
+
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+#MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
