--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "dompdf/dompdf": "^0.8.3",
         "sensio/framework-extra-bundle": "^5.4",
         "sensiolabs/security-checker": "^6.0",
         "symfony/asset": "4.3.*",
@@ -17,6 +18,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "4.3.*",
         "symfony/security-csrf": "4.3.*",
+        "symfony/swiftmailer-bundle": "^3.3",
         "symfony/validator": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
